# fermion

./: .editorconfig  .gitignore  AUTHORS  README.md  co.tauos.Fermion.json  com.fyralabs.Fermion.json  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: co.tauos.Fermion.appdata.xml.in  co.tauos.Fermion.desktop.in  co.tauos.Fermion.gresource.xml  co.tauos.Fermion.gschema.xml  co.tauos.Terminal.appdata.xml.in  co.tauos.Terminal.desktop.in  co.tauos.Terminal.gresource.xml  co.tauos.Terminal.gschema.xml  com.fyralabs.Fermion.appdata.xml.in  com.fyralabs.Fermion.desktop.in  com.fyralabs.Fermion.gresource.xml  com.fyralabs.Fermion.gschema.xml  meson.build
data/icons/: meson.build
data/style/: style-dark.css  style.css
data/ui/: preferences.ui  window.ui
data/ui/dialogs/: process.ui  unsafe_paste.ui
data/ui/gtk/: help-overlay.ui
po/: POTFILES  meson.build
src/: application.vala  config.vala.in  meson.build  preferences.vala  utils.vala  window.vala
src/dialogs/: process.vala  unsafe_paste.vala
src/handlers/: keyboard.vala  mouse.vala
src/lib/: PreferencePage.vala  PreferenceWindow.vala  Tab.vala  TabPage.vala  TabSwitcher.vala
src/widgets/: terminal.vala
